# blackbox

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  mkdocs.yml  plan.md  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: AUDIT.md  PUBLISH.md  README.md  ROADMAP.md  WRITING.md  agent-api.md  ambient-contract.md  claims.md  inventory.json  inventory.md
docs/guide/: README.md  adapters.md  boundaries-and-incidents.md  budgets-and-adapters.md  capsules-and-cassettes.md  cheatsheet.md  concepts.md  configuration.md  debug-a-failure.md  doctor-and-capture.md  everyday-use.md  examples.md  experiments.md  export-and-sync.md  fsck-and-integrity.md  getting-started.md  glossary.md  install.md  leave-it-on.md  native-integrations.md  overhead.md  recipes.md  security.md  troubleshooting.md  verification.md  what-is-blackbox.md
docs/history/: PHASE1-3-PLAN.md  README.md
docs/internals/: architecture.md  capture-pipeline.md  continuity-plane.md  storage.md
docs/plan/: adoption-1.1.md  agent-boundary-1.7.md  agent-memory-bus-1.2.md  backlog.md  daily-driver-0.2.md  evidence-protocol-1.9.md  evidence-semantics-1.8.md  trace-integrity-1.5.md  trust-explain-1.3.md  trust-proof-1.4.md
docs/reference/: boundary.md  cli.md  json-api.md  mcp.md  memory-pack.md  portable-format.md  score.md  stream-protocol.md
docs/skills/: blackbox.md
scripts/: check_doc_links.py  prepare_docs_site.sh  release-qualify-unix.sh
skills/: blackbox.md
spec/: README.md  canonical.md  compatibility.md
spec/schemas/: boundary.v1.json  boundary_finding.v1.json  boundary_finding_decision.v1.json  catalog.json  commitment_run.v1.json  conformance_report.v1.json  containment_receipt.v1.json  event.v1.json  evidence_event.v1.json  forensic_pack.v1.json  incident.v1.json  native_ingest.v1.json  otlp_loss.v1.json  portable.v2.json  reconcile_outcome.v1.json  run.v1.json  security_decision.v1.json  verification_receipt.v1.json
src/: aggregates.rs  backup.rs  cli.rs  cli_ext.rs  config.rs  context.rs  crypto.rs  lib.rs  main.rs  maybe_run.rs  mcp.rs  memory.rs  nest.rs  output.rs  pricing.rs  privacy.rs  resume.rs  resume_inject.rs  retention.rs  run.rs  score.rs  scrub.rs  search.rs  serve.rs  shell_install.rs  state.rs  status.rs  summary.rs  sync.rs  trajectory.rs  transcript.rs  util.rs  views.rs  workspace_manifest.rs
src/adapter_protocol/: manifest.rs  mod.rs  validation.rs
src/adapters/: agents.rs  claude.rs  codex.rs  detect.rs  generic.rs  harness.rs  launch.rs  mod.rs  native_logs.rs  parse.rs
src/analysis/: anomalies.rs  causal.rs  classifier.rs  correlator.rs  error_detector.rs  failure_fix.rs  mod.rs  ordering.rs  retry_waste.rs  turning_points.rs
src/boundary/: auto_provenance.rs  benchmark.rs  canary.rs  containment.rs  contract.rs  corpus.rs  correlate.rs  detect.rs  evidence.rs  finding.rs  identity.rs  lint.rs  mod.rs  normalize.rs  provenance.rs  resolve.rs  selector.rs  trust.rs  vocab.rs
src/budget/: cgroup.rs  linux.rs  mod.rs  policy.rs  report.rs
src/capsule/: create.rs  inspect.rs  mod.rs
src/capture/: coverage.rs  filesystem.rs  git.rs  health.rs  mod.rs  process.rs  pty.rs
src/cassette/: format.rs  matching.rs  mcp_proxy.rs  mod.rs
src/commitment/: chain.rs  event_hash.rs  mod.rs  sign.rs  verify.rs
src/conformance/: mod.rs  profiles.rs  runner.rs
src/core/: blob.rs  blob_refs.rs  checkpoint.rs  command.rs  event.rs  mod.rs  process_tree.rs  run.rs  timing.rs
src/evidence/: adapters.rs  event.rs  import.rs  mod.rs
src/experiment/: gate.rs  mod.rs  model.rs  report.rs  stats.rs
src/export/: html.rs  jsonl.rs  mod.rs  portable.rs
src/forensic/: mod.rs  pack.rs
src/incident/: continuation.rs  export.rs  graph.rs  mod.rs  model.rs  page.rs
src/ingest/: mod.rs  recovery.rs  spool.rs
src/integrations/: claude_hooks.rs  mod.rs
src/integrity/: fsck.rs  mod.rs  repair.rs  report.rs
src/native/: envelope.rs  mod.rs  ndjson.rs  recorder.rs  unix_socket.rs
src/otlp/: export.rs  import.rs  loss.rs  mod.rs
src/pipeline/: batch_ingest.rs  event_writer.rs  mod.rs
src/projects/: mod.rs  registry.rs
src/protocol/: canonical.rs  mod.rs  proptest.rs  schema.rs  stability.rs  validate.rs
src/redaction/: environment.rs  export.rs  mod.rs  scanner.rs  store_scan.rs  stream.rs
src/replay/: fork.rs  mock.rs  mod.rs  sandbox.rs  timeline.rs
src/security/: action.rs  decision.rs  mod.rs  reconcile.rs
src/storage/: mod.rs  page.rs  sqlite.rs  store.rs
src/supervisor/: checkpoint.rs  lifecycle.rs  mod.rs  rollup.rs  shutdown.rs
src/terminal/: ansi.rs  coalesce.rs  mod.rs  recorder.rs  transcript.rs
src/ui/: diff.rs  event.rs  mod.rs  panels.rs  process_tree.rs  runs.rs  timeline_v.rs  tui.rs
src/verification/: command.rs  domain.rs  junit.rs  mod.rs  outcome.rs  receipt.rs  tap.rs
test-vectors/: README.md
test-vectors/canonical/: key-order.json  nested-sort.json
tests/: adapter_conformance.rs  aggregate_semantics.rs  ambient_contract.rs  auto_provenance.rs  blob_reference_rewrite.rs  boundary_1_7_completion.rs  boundary_1_7_full.rs  boundary_1_8_release_contract.rs  boundary_contract.rs  boundary_detector_quality.rs  boundary_trust_integration.rs  budget_cgroup_linux.rs  budget_enforcement_linux.rs  capsule_integrity.rs  ci_eval.rs  commitment_chain.rs  conformance_runner.rs  dashboard_auth.rs  docs_cli_envelope.rs  docs_commands.rs  docs_first_run.rs  endurance_100k.rs  event_ordering.rs  evidence_adversarial.rs  evidence_orchestration.rs  experiment_reports.rs  fault_recovery.rs  filesystem_escape.rs  fsck_corruption.rs  incident_graph_flow.rs  incident_memory_bound.rs  incident_pagination.rs  incident_scale.rs  ingest_spool_recovery.rs  integration_run.rs  long_run_integrity.rs  mcp_cassette.rs  mcp_proxy_smoke.rs  mcp_record_e2e.rs  memory_pack_quality.rs  (+37 more)
tests/fixtures/docs/: README.md  (+3 more)
(+43 files in other folders)
