[package]
name = "blackbox"
version = "0.1.0"
edition = "2021"
description = "A flight recorder and debugger for AI-agent runs"
authors = ["blackbox team"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ai", "agent", "debugger", "trace", "cli"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# PTY supervision
portable-pty = "0.8"
libc = "0.2"

# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Filesystem watching
notify = "6"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Compression
zstd = { version = "0.13", features = ["experimental"] }

# Error handling
anyhow = "1"
regex = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Terminal utilities
term_size = "0.3"

# Local web dashboard
axum = { version = "0.8", default-features = true, features = ["macros"] }
tower = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
