[package]
name = "blackbox-recorder"
version = "1.0.0"
edition = "2021"
description = "Flight recorder and debugger for AI-agent runs — PTY capture, SQLite traces, safe export"
authors = ["Wan Azhar <17683456+wanazhar@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/blackbox-recorder"
keywords = ["ai", "agent", "debugger", "trace", "cli"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]
exclude = [
    ".blackbox/",
    ".devin/",
    "blackbox.db",
    "blackbox.db-wal",
    "blackbox.db-shm",
    "target/",
    "docs/history/",
    "*.db",
    "*.db-wal",
    "*.db-shm",
]

repository = "https://github.com/wanazhar/blackbox"
homepage = "https://github.com/wanazhar/blackbox"

[lib]
name = "blackbox"
path = "src/lib.rs"

[[bin]]
name = "blackbox"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# PTY supervision
portable-pty = "0.8"
libc = "0.2"

# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Filesystem watching
notify = "6"

# Hashing / encoding
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Error handling
anyhow = "1"
regex = "1"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Terminal utilities
term_size = "0.3"

# Local web dashboard
axum = { version = "0.8", default-features = true, features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout"] }
futures-util = "0.3"

# Remote sync clients
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
object_store = { version = "0.11", features = ["aws"] }
bytes = "1"
toml = { version = "0.8", features = ["parse"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
